<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/PleaseInputYourName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/PleaseInputYourNameAndStartGame"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/edit_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_name"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/text_name">

        <RadioButton
            android:id="@+id/paper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/paper"
            android:textColor="#00838F"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

        <RadioButton
            android:id="@+id/scissor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scissor" />

        <RadioButton
            android:id="@+id/stone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stone" />
    </RadioGroup>

    <Button
        android:id="@+id/mora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mora"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>

    <TextView
        android:id="@+id/player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="@+id/mora"
        app:layout_constraintTop_toBottomOf="@+id/mora"/>

    <TextView
        android:id="@+id/winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/winner"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toEndOf="@+id/player_name"
        app:layout_constraintTop_toTopOf="@+id/player_name"/>

    <TextView
        android:id="@+id/player_mora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PlayerMora"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toEndOf="@+id/winner"
        app:layout_constraintTop_toTopOf="@+id/winner"/>

    <TextView
        android:id="@+id/pc_mora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PcMora"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toEndOf="@+id/player_mora"
        app:layout_constraintTop_toTopOf="@+id/player_mora"/>

</androidx.constraintlayout.widget.ConstraintLayout>